[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/scripts/Menu/ReturnMainMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/audio/ui/button_click.wav" type="AudioStream" id=2]
[ext_resource path="res://resources/audio/ui/button_navigate.wav" type="AudioStream" id=3]
[ext_resource path="res://src/scripts/Menu/BackButton.gd" type="Script" id=4]
[ext_resource path="res://src/theme/zordoom_theme.tres" type="Theme" id=5]
[ext_resource path="res://scenes/UI/CharacterSelectionButton.tscn" type="PackedScene" id=6]

[node name="CharacterSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
menus = "Options"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxCharacterContainer" type="VBoxContainer" parent="CenterContainer"]
margin_top = 147.0
margin_right = 1280.0
margin_bottom = 573.0

[node name="Label" type="Label" parent="CenterContainer/VBoxCharacterContainer"]
margin_right = 1280.0
margin_bottom = 59.0
theme = ExtResource( 5 )
text = "Pick your character"
align = 1
valign = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxCharacterContainer"]
margin_top = 63.0
margin_right = 1280.0
margin_bottom = 363.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 1280, 0 )
alignment = 1

[node name="AngelaSelectionButton" parent="CenterContainer/VBoxCharacterContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 438.0
margin_right = 638.0
characters = "Angela"

[node name="RivetSelectionButton" parent="CenterContainer/VBoxCharacterContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 642.0
margin_right = 842.0
characters = "Rivet"

[node name="VBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxCharacterContainer"]
margin_top = 367.0
margin_right = 1280.0
margin_bottom = 426.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BackButton" type="Button" parent="CenterContainer/VBoxCharacterContainer/VBoxContainer"]
margin_left = 540.0
margin_right = 740.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
theme = ExtResource( 5 )
text = "Back"
script = ExtResource( 4 )

[node name="Audio" type="Node" parent="CenterContainer/VBoxCharacterContainer/VBoxContainer/BackButton"]

[node name="Click" type="AudioStreamPlayer" parent="CenterContainer/VBoxCharacterContainer/VBoxContainer/BackButton/Audio"]
stream = ExtResource( 2 )

[node name="Move" type="AudioStreamPlayer" parent="CenterContainer/VBoxCharacterContainer/VBoxContainer/BackButton/Audio"]
stream = ExtResource( 3 )

[node name="Audio" type="Node" parent="."]

[node name="Click" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 2 )

[node name="Move" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 3 )

[connection signal="focus_exited" from="CenterContainer/VBoxCharacterContainer/VBoxContainer/BackButton" to="CenterContainer/VBoxCharacterContainer/VBoxContainer/BackButton" method="_on_BackButton_focus_exited"]
[connection signal="pressed" from="CenterContainer/VBoxCharacterContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
